--- a/Downloads/index.html
+++ b/Downloads/index.html
@@ -27,13 +27,8 @@
 </head> 
   
 <body>
- <iframe src="https://neontechrealak.wixsite.com/mysite"
-            frameborder="0" 
-            marginheight="0" 
-            marginwidth="0" 
-            width="100%" 
-            height="100%" 
-            scrolling="auto"> 
+ <iframe src="https://sites.google.com/view/managew/home"
+> 
   </iframe> 
 </body>
 </html>
