--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 <script defer src="js/material.min.js"></script>
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link href="css/" rel="stylesheet">
+<script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
+<link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />
   <!-- STYLE -->
 <style>
 html { overflow-y: scroll; }
