--- a/index.html
+++ b/index.html
@@ -292,7 +292,8 @@ input[type=text]:focus {
   </li>
    <li><a class="waves-effect" href="/CODES/">Codes of my Homepage</a></li>
    <li><a class="waves-effect" href="/study/">Study Material</a></li>
-   <li><a class="waves-effect" href="https://materializecss.com/">https://materializecss.com/</a></li>
+   <li><a class="waves-effect" href="/Downloads/">Downloads</a></li>
+   <li>< href="https://materializecss.com/">https://materializecss.com/</a></li>
  </ul>
 
 <!-- parallax -->
